--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,10 +6,16 @@
 }
 
 @theme inline {
-  --color-background: var(--background);
+  /* --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-mono: var(--font-geist-mono); */
+  --color-primary: #4b53b2;
+  --color-secondary: #c49356;
+  --font-poppins: var(--font-poppins);
+  --font-dmSerifText: var(--font-dmSerifText);
+  --font-rubik: var(--font-rubik);
+  --font-reemkufi: var(--font-reemkufi);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,8 +25,6 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+* {
+  box-sizing: border-box;
 }
